--- a/assets/css/styles_feeling_responsive.scss
+++ b/assets/css/styles_feeling_responsive.scss
@@ -41,6 +41,7 @@ sitemap:
 @import "07_layout.scss";
 @import "foundation-components/grid";
 @import "09_elements.scss";
+@import "spoiler.scss";
 
 {% if site.asciidoctor-enabled == true %}
 @import "10_asciidoc.scss";
