--- a/_includes/_head.html
+++ b/_includes/_head.html
@@ -89,3 +89,9 @@
 	{% unless page.style == NULL %}
 	<style type="text/css">{{ page.style }}</style>
 	{% endunless %}
+
+        {% if page.use_math %}
+            <script type="text/javascript" async
+                src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.4/MathJax.js?config=TeX-MML-AM_CHTML" async>
+            </script>
+        {% endif %}
