--- a/_sass/_01_settings_colors.scss
+++ b/_sass/_01_settings_colors.scss
@@ -18,7 +18,7 @@
 
 $text-color:       	#111;
 $body-font-color: 	$text-color;
-$body-bg: 			#fdfdfd;
+$body-bg: 		#fdfdfd;
 
 
 
@@ -31,7 +31,7 @@ $ci-2: #45B29D;		// turquoise
 $ci-3: #EFC94C;		// yellow
 $ci-4: #E27A3F;		// orange
 $ci-5: #DF4949;		// red
-$ci-6: #A1D044;     // green
+$ci-6: #A1D044;         // green
 
 
 
@@ -121,7 +121,8 @@ $subfooter-link-color: $grey-8;
 /* Code
 ------------------------------------------------------------------- */
 
-$code-background-color: scale-color($secondary-color, $lightness: 70%);
+/*$code-background-color: scale-color($secondary-color, $lightness: 70%);*/
+$code-background-color: #eee;
 
 $highlight-background: #ffffff;
 $highlight-comment: #999988;
