--- a/_sass/_11_syntax-highlighting.scss
+++ b/_sass/_11_syntax-highlighting.scss
@@ -3,7 +3,8 @@
 ------------------------------------------------------------------- */
 
 .highlight {
-    background: #fff;
+    background: $code-background-color;
+    box-shadow: 10px 10px 5px #888888;
     .c     { color: #998; font-style: italic } // Comment
     .err   { color: #a61717; background-color: #e3d2d2 } // Error
     .k     { font-weight: bold } // Keyword
