* fix q&a feature * adjust front page branding * port hand_coded_heat lesson * fix config for images * add collections for lessons * adjust menus * fix footer links * move documentation to contributing menu

--- a/_includes/_google_search.html
+++ b/_includes/_google_search.html
@@ -8,9 +8,9 @@
 </script>
 
 <form id="search" onsubmit="google_search(); return false;">
-	<input type="text" id="google-search" placeholder="{{ site.data.language.enter_search_term }}">
+	<input type="text" id="google-search" placeholder="{{ site.data.language.enter_search_term }}" style="color:blue;">
 </form>
 <noscript>
-	Search <a href="https://www.google.com/search?q=site:{{ google_search_site | cgi_escape }}" target="_blank">Google</a> for:
+	FooBar <a href="https://www.google.com/search?q=site:{{ google_search_site | cgi_escape }}" target="_blank">Google</a> for:
 	<pre><code>search-term site:{{ google_search_site }}</code></pre>
 </noscript>
