--- a/_sass/_01_settings_colors.scss
+++ b/_sass/_01_settings_colors.scss
@@ -16,7 +16,7 @@
 /* Basics
 ------------------------------------------------------------------- */
 
-$text-color:       	#111;
+$text-color:       	#8B8B8B;
 $body-font-color: 	$text-color;
 $body-bg: 		#fdfdfd;
 
@@ -31,8 +31,8 @@ $ci-2: #45B29D;		// turquoise
 $ci-3: #EFC94C;		// yellow
 $ci-4: #E27A3F;		// orange
 $ci-5: #DF4949;		// red
-$ci-6: #A1D044;         // green
-
+/*$ci-6: #A1D044;         // green*/
+$ci-6: #00AFD7;         // green 
 
 
 /* Foundation Color Variables
