--- a/_sass/_06_typography.scss
+++ b/_sass/_06_typography.scss
@@ -89,6 +89,7 @@ h1, h2, h3, h4, h5, h6 {
     font-family: $header-font-family;
     font-weight: normal;
     padding: 0;
+    color: $ci-2;
 }
 
 h1 {
