--- a/_includes/_head.html
+++ b/_includes/_head.html
@@ -91,6 +91,13 @@
 	{% endunless %}
 
         {% if page.use_math %}
+            <script type="text/x-mathjax-config">
+                MathJax.Hub.Config({
+                    CommonHTML: {
+                        scale: 200
+                    }
+                });
+            </script>
             <script type="text/javascript" async
                 src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.4/MathJax.js?config=TeX-MML-AM_CHTML" async>
             </script>
