--- a/_sass/_02_settings_typography.scss
+++ b/_sass/_02_settings_typography.scss
@@ -58,3 +58,5 @@ $font-size-small:   0.8em;
 .font-size-h3   { font-size: $font-size-h3; }
 .font-size-h4   { font-size: $font-size-h4; }
 .font-size-h5   { font-size: $font-size-h5; }
+
+.MathJax { font-size: 20.3em !important; }
