adding back link to lessons in layout

--- a/_layouts/page-fullwidth.html
+++ b/_layouts/page-fullwidth.html
@@ -31,6 +31,11 @@ format: page-fullwidth
 			{% endif %}
 
 			{{ content }}
+
+                        {% if page.lesson %}
+                        <p><a href='../../lessons'>Back to all ATPESC 2018 Lessons</a></p>
+                        {% endif %}
+
 		</article>
 	</div><!-- /.medium-12.columns -->
 </div><!-- /.row -->
