--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -37,6 +37,8 @@ format: post
 
 			<div itemprop="articleSection">
 			{{ content }}
+
+<h1>Hello World</h1>
 			</div>
 
 			{% if page.show_meta == true %}
