--- a/_includes/_footer.html
+++ b/_includes/_footer.html
@@ -24,6 +24,11 @@
               <li><a href="{{ social_item.url }}" target="_blank" class="{{ social_item.class }}" title="{{ social_item.title }}"></a></li>
             {% endfor %}
             </ul>
+
+                        <a class="button left r15 tiny radius" href="{{ site.improve_content }}/{{ page.path }}">{{ site.data.language.edit }}</a>
+
+
+
           </div><!-- /.large-3.columns -->
         </div><!-- /.row -->
 
